--- a/package.json
+++ b/package.json
@@ -13,8 +13,7 @@
     "@abandonware/bluetooth-hci-socket": "^0.5.3-5",
     "noble": "^1.9.1"
   },
-  "addLater":
-  {
+  "addLater": {
     "body-parser": "^1.19.0",
     "express": "^4.17.1"
   }
